tests/NormalTests/paczka1/small_fuzzy/81245758.err
Error in line 9: bWlgig A327 45,1
Error in line 7: mNetY76 S96 60,1
